assets/css/theme.css
/* ... */
.section-3 .box-2 h4 {
	color: #fff;
	font-family: "Libre Baskerville";
	font-size: 20px;
	font-weight: 400;
	margin-top: 24px;
}

.section-3 .box-2 p {
	color: #ffffff;
	font-family: Roboto;
	font-size: 15px;
	font-weight: 300;
	line-height: 26px;
	margin-top: 24px;
	margin-bottom: 0;
}

.section-3 .box-2 a {
	border-radius: 2px;
	border: 1px solid #ffffff;
	color: #fff;
	padding: 17px 23px;
	transition: all 0.5s ease;

}

.section-3 .box-2 a:hover {
	background-color: #fe533d;
	border: 1px solid #fe533d;
	text-decoration: none;
}


.section-3 .container-fluid {
	padding-left: 0;
	padding-right: 0;
}

/* Section 3 */

.section-4 {
	padding: 100px 0;
}

.section-head h5 {
	color: #222222;
	font-family: "Libre Baskerville";
	font-size: 16px;
	font-style: italic;
	text-align: center;
}

.section-head h2 {
	color: #151c32;
	font-family: "Libre Baskerville";
	font-size: 36px;
	font-weight: 400;
	text-align: center;
}

.section-head .line-2-red {
	width: 60px;
	height: 2px;
	background-color: #fe533d;
	margin: 25px auto
}

/* Section 4 */

.item-section-4 i,
.item-section-4 h5 {
	transition: all 0.5s ease;
}

.item-section-4 i {
	font-size: 30px;
}

.item-section-4:hover i {
	color: #fe533d;
}

.item-section-4:hover h5 {
	color: #fe533d;
}

.item-text {
	margin-left: 20px;
}

.item-text h5 {
	color: #151c32;
	font-family: "Libre Baskerville";
	font-size: 18px;
	font-weight: 700;
	text-align: left;
	font-style: normal;
}

.item-text p {
	color: #444444;
	font-family: Roboto;
	font-size: 15px;
	font-weight: 300;
	line-height: 26px;
}

.space-top-section-4 {
	margin-top: 90px;
}

/* Section 5 */

.section-5 {
	background: url(../media/img/s-4-back.jpg);
	background-attachment: fixed;
	background-position: 50% 50%;
	background-size: cover;
}

.block-section {
	background: #fe533d;
	margin-top: 100px;
	padding: 70px;
	margin-bottom: -50px;
}

.sub-block-section h3 {
	margin-left: 17px;
	margin-top: 10px;
	color: #ffffff;
	font-family: "Libre Baskerville";
	font-size: 32px;
	font-weight: 400;
	line-height: 1.4;
}



html .section-head h2 {
	font-size: 27px;
}


.text-block-section h5 {
	color: #ffffff;
	font-family: "Libre Baskerville";
	font-size: 24px;
	font-weight: 400;
	line-height: 40px;
	margin-top: 20px;
	margin-bottom: 50px;
}

.text-block-section h5:before {
	content: "";
	width: 30px;
	position: relative;
	top: 2px;
	left: -2px;
	height: 2px;
	margin-right: 10px;
	margin-left: -40px;
	margin-bottom: 10px;
	display: inline-block;
	vertical-align: middle;
	background-color: #ffffff;
}

.text-block-section a {
	padding: 20px 30px;
	border-radius: 2px;
	;
	background-color: #151c32;
	color: #ffffff;
	font-family: "Libre Baskerville";
	font-size: 16px;
	font-weight: 400;
	text-decoration: none;
	transition: all 0.5s ease;
}

.text-block-section a:hover {
	background: #1c284e;
}

.number-block-wrap {
	margin-top: 100px;
}

.number-block-wrap-2 {
	margin-top: 30px;
}

.number-item h3 {
	color: #cea05f;
	font-family: "Libre Baskerville";
	font-size: 60px;
	font-weight: 400;
	background: none;
	margin-bottom: 5px;
}

.number-item h6 {
	color: #ffffff;
	font-family: Roboto;
	font-size: 15px;
	font-weight: 300;
	line-height: 26px;
	margin-top: 15px;
}

.number-item .line-2-white {
	margin-top: 0;
}

/* Section 6 */

.section-6 {
	margin-top: 140px;
}

.isotop-menu {
	margin-top: 50px;
	margin-bottom: 40px;
}

.isotop-menu button {
	background: none;
	border: none;
	margin-right: 20px;
	color: #151c32;
	font-family: Roboto;
	font-size: 15px;
	font-weight: 500;
	line-height: 32px;
	cursor: pointer;
}


.isotop-menu button.current {
	color: #cea05f;
}

.isotop-menu button {
	outline: none;
}

.grid-item {
	width: 20%;
	overflow: hidden;
	transition: all 0.7s ease;
}


.grid-item img {
	width: 100%;
	height: auto;
}

.filter-grid {
	opacity: 0;
	position: absolute;
	top: 100px;
	left: 0;
	width: 100%;
	height: 100%;
	background-color: #151c32;
	color: #fff;
	transition: all 0.7s ease;
}

.grid-item:hover .filter-grid {
	opacity: 0.9;
	top: 0;
	left: 0;
}

.filter-grid h4 {
	color: #ffffff;
	font-family: "Libre Baskerville";
	font-size: 24px;
	font-weight: 700;
	line-height: 40px;
	text-align: center;
	margin-bottom: 0;
}

.filter-grid h5 {
	color: #fe533d;
	font-family: Roboto;
	font-size: 15px;
	font-weight: 400;
	line-height: 32px;
	text-align: center;
}

/* Section 7 */

.section-7 {
	border: solid 20px #fff;
	background: #cea05f;
	padding: 100px 0;
	text-align: center
}

.section-7 h2 {
	text-align: center;
	color: #ffffff;
	font-family: "Libre Baskerville";
	font-size: 32px;
	font-weight: 500;
}

.section-7 i {
	margin-top: 40px;
	color: #ffffff;
	font-size: 48px;
	font-weight: 700;
	line-height: 1.4;
}

.section-7 i span {
	padding-left: 10px;
	font-family: "Libre Baskerville";
	font-size: 48px;
}

.section-7 h6 {
	color: #ffffff;
	font-family: Roboto;
	font-size: 18px;
	font-weight: 300;
	line-height: 30px;
	margin-top: 40px;
	margin-bottom: 60px;
}

.section-7 a {
	border-radius: 2px;
	border: 1px solid #ffffff;
	color: #fff;
	padding: 17px 23px;
	transition: all 0.5s ease;
}

.section-7 a:hover {
	background-color: #fe533d;
	border: 1px solid #fe533d;
	text-decoration: none;
}

/* Section 8 */

.section-8 {
	padding: 100px 0;
}

.team-wrap {
	flex-direction: row;
}

.team-left h2 {
	color: #151c32;
	font-family: "Libre Baskerville";
	font-size: 36px;
	font-weight: 400;
}

.team-left p {
	color: #444444;
	font-family: Roboto;
	font-size: 15px;
	font-weight: 300;
	line-height: 26px;
	margin-top: 30px;
}

.team-line-red {
	width: 60px;
	height: 2px;
	margin-top: 20px;
	background-color: #fe533d;
}

.team-item {
	transition: all 0.5s ease;
}

.team-item:hover {
	transform: scale(1.05);
	box-shadow: 0 0 13px rgba(0, 0, 0, 0.21);
	z-index: 10000;
}

.team-item-text {
	padding: 50px;
	text-align: center;
}

.team-item-text i {
	color: #151c32;
	font-size: 16px;
}

.team-item-text i span {
	color: #cea05f;
	font-family: "Libre Baskerville";
	font-size: 18px;
	font-weight: 400;
	margin-left: 10px;
}
/* ... */

